[gd_scene load_steps=13 format=3 uid="uid://chx0om5a7f6cv"]

[ext_resource type="Script" uid="uid://r5tx58gfw4vr" path="res://scenes/game_scene/game_ui.gd" id="1_bmy5n"]
[ext_resource type="Script" uid="uid://cyh0d64pfygbl" path="res://addons/maaacks_game_template/base/scripts/pause_menu_controller.gd" id="1_onvsj"]
[ext_resource type="PackedScene" uid="uid://cq7f7rqt63a7r" path="res://scenes/overlaid_menus/pause_menu.tscn" id="2_8qp3c"]
[ext_resource type="Script" uid="uid://crbo2e4ndbyvk" path="res://addons/maaacks_game_template/extras/scripts/level_list_loader.gd" id="3_bmy5n"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/scenes/music_players/background_music_player.tscn" id="4_7aihr"]
[ext_resource type="PackedScene" uid="uid://cgt6osglrixmw" path="res://scenes/loading_screen/level_loading_screen.tscn" id="5_3re04"]
[ext_resource type="Script" uid="uid://5b3ftriikvyt" path="res://scripts/level_list_state_manager.gd" id="7_wr4n6"]
[ext_resource type="PackedScene" uid="uid://1yex1xs71fe0" path="res://scenes/overlaid_menus/game_won_menu.tscn" id="8_ukb12"]
[ext_resource type="PackedScene" uid="uid://04du16hjyofj" path="res://scenes/overlaid_menus/level_lost_menu.tscn" id="9_i7m4m"]
[ext_resource type="PackedScene" uid="uid://tcv64topdg6v" path="res://scenes/game_scene/journal_panel.tscn" id="10_onvsj"]
[ext_resource type="PackedScene" uid="uid://djtgue80w6l2v" path="res://scenes/overlaid_menus/level_won_menu.tscn" id="10_rkfhe"]
[ext_resource type="PackedScene" uid="uid://dj7utvhx2i1r6" path="res://scenes/game_scene/goals_mini_panel.tscn" id="11_8qp3c"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bmy5n")

[node name="PauseMenuController" type="Node" parent="."]
script = ExtResource("1_onvsj")
pause_menu_packed = ExtResource("2_8qp3c")

[node name="LevelLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("3_bmy5n")
level_container = NodePath("../GameWorldContainer")
files = Array[String](["res://scenes/game_scene/levels/level_1.tscn", "res://scenes/game_scene/levels/level_2.tscn", "res://scenes/game_scene/levels/level_3.tscn", "res://scenes/game_scene/levels/level_4.tscn", "res://scenes/game_scene/levels/level_5.tscn", "res://scenes/game_scene/levels/level_6.tscn"])
directory = "res://scenes/game_scene/levels"

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("4_7aihr")]

[node name="LevelLoadingScreen" parent="." instance=ExtResource("5_3re04")]
visible = false

[node name="LevelListManager" type="Node" parent="." node_paths=PackedStringArray("level_list_loader", "level_loading_screen")]
script = ExtResource("7_wr4n6")
level_list_loader = NodePath("../LevelLoader")
main_menu_scene = "res://scenes/menus/main_menu/main_menu_with_animations.tscn"
ending_scene = "res://scenes/end_credits/end_credits.tscn"
level_loading_screen = NodePath("../LevelLoadingScreen")
game_won_scene = ExtResource("8_ukb12")
level_lost_scene = ExtResource("9_i7m4m")
level_won_scene = ExtResource("10_rkfhe")

[node name="GameWorldContainer" type="Node" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="JournalPanel" parent="Control" instance=ExtResource("10_onvsj")]
layout_mode = 1

[node name="GoalsMiniPanel" parent="Control" instance=ExtResource("11_8qp3c")]
unique_name_in_owner = true
layout_mode = 1
offset_left = -8.0
offset_top = -34.5
offset_right = 137.0
offset_bottom = 34.5

[connection signal="level_loaded" from="LevelLoader" to="." method="_on_level_loader_level_loaded"]
